<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>rviz_doodles</name>
  <version>0.0.0</version>
  <description>Experiments with rviz and transforms</description>

  <maintainer email="ptrmu@outlook.com">Peter Mullen</maintainer>
  <license>BSD</license>

  <author>Peter Mullen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
